# clang-tests

./: README.md  ci.sh
test-1/: clean.sh  compile.sh  run.sh  tool.cpp
test-2/: .gitignore  clean.sh  compile.sh  main.c  run.sh  shared.c  shared.h
test-3/: CMakeLists.txt  run.sh  test.cpp  tool.cpp
